broke down and organized trigger classes; added config support, watched channels, auto joins and multiple servers

--- a/config
+++ b/config
@@ -3,6 +3,9 @@
 :ident: arcanine
 :nick: arcanine
 :servers: 
-- :host: irc.freenode.net
+- :channels: 
+  - "#botters"
+  - "#arcanine"
+  :host: irc.freenode.net
   :name: freenode
   :port: 6667
